--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
-    "react": "^19.2.3",
     "lucide-react": "0.460.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "9",
-    "remark-gfm": "4",
-    "react-syntax-highlighter": "^16.1.0"
+    "react-router-dom": "^7.12.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
