--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "0.460.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "9",
     "react-router-dom": "^7.12.0",
     "react-syntax-highlighter": "^16.1.0",
-    "remark-gfm": "4"
+    "remark-gfm": "4",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "concurrently": "^9.1.2",
