--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "9",
     "react-router-dom": "^7.12.0",
     "react-syntax-highlighter": "^16.1.0",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "4",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
