--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "4",
     "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.3.6"
   },
   "devDependencies": {
