--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google/genai": "^1.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.460.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
