--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "exceljs": "^4.4.0",
+    "katex": "^0.16.28",
     "lucide-react": "^0.460.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "9",
     "react-router-dom": "^7.12.0",
     "react-syntax-highlighter": "^16.1.0",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "4",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
     "zod": "^4.3.6"
